Revised powerpoint to incorporate current notebooks. Updated notebooks as needed from last update.

--- a/Classifiers - Boolean.ipynb
+++ b/Classifiers - Boolean.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
        "Name: 0, dtype: bool"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +535,7 @@
        "[10 rows x 43 columns]"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
        "Name: 0, dtype: float64"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +646,7 @@
        "Name: Denied, dtype: int64"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +667,7 @@
        "1.0"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +704,7 @@
        "(20514, 43)"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +724,7 @@
        "(20514,)"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 132,
    "metadata": {
     "scrolled": true
    },
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +784,7 @@
        "(13744, 43)"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +805,7 @@
        "(6770, 43)"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -882,12 +882,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The next step in our model is to take the model we just made using the training data and feed the test data into it. This will output an array of values that the algorithm has determined to be the denied status."
+    "The next step in our process is to take the model we just made using the training data and feed the test data into it. This will output an array of values that the algorithm has determined to be the denied status."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -931,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +969,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Test for Best Classifier to Use"
+    "## 5. Test for Best Algorithm to Use"
    ]
   },
   {
@@ -979,7 +979,7 @@
     "Now that we understand how machine learning is done, we can determine which model is the best choice for our data. In this example we will use 5 different classifiers and evaluate each against 5 accuracy metrics.\n",
     "\n",
     "__Note:__ \n",
-    "1. For picking a fold size, it is recommended to choose n=5, 10, or 20 (http://vinhkhuc.github.io/2015/03/01/how-many-folds-for-cross-validation.html). For this problem, we have chosen K = 20 and the comparisons can be found at ***.\n",
+    "1. For picking a fold size, it is recommended to choose n=5, 10, or 20 (http://vinhkhuc.github.io/2015/03/01/how-many-folds-for-cross-validation.html). For this problem, we have chosen K = 20 and the comparisons can be found at https://github.com/mawebster9/ThesisCode/blob/master/NumFoldsComparison.txt.\n",
     "2. The cross_val_score() function works by running all of the following functions:\n",
     "    - Shuffle the dataset randomly\n",
     "    - Split the dataset into k (n=20) groups\n",
@@ -1002,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -1019,11 +1019,11 @@
       "                       verbose=0, warm_start=False)\n",
       "\n",
       "Scoring Metrics: \n",
-      "\t* roc_auc score:  0.9975312166593231\n",
-      "\t* f1 score:  0.9939071275432465\n",
-      "\t* accuracy score:  0.9935164723529228\n",
-      "\t* precision score:  0.996587143461646\n",
-      "\t* recall score:  0.9912539946917995\n",
+      "\t* roc_auc score:  0.9975065169216479\n",
+      "\t* f1 score:  0.9941819328289887\n",
+      "\t* accuracy score:  0.9938083000372531\n",
+      "\t* precision score:  0.9961280656832369\n",
+      "\t* recall score:  0.9913462449897086\n",
       "-----------------------------------------------------------------------------------------------------------\n",
       "Classifier:  GaussianNB(priors=None, var_smoothing=1e-09)\n",
       "\n",
@@ -1055,10 +1055,10 @@
       "                       random_state=None, splitter='best')\n",
       "\n",
       "Scoring Metrics: \n",
-      "\t* roc_auc score:  0.9967712674432809\n",
-      "\t* f1 score:  0.994732973895218\n",
-      "\t* accuracy score:  0.9944423037457112\n",
-      "\t* precision score:  0.9978727430682574\n",
+      "\t* roc_auc score:  0.9968756713123629\n",
+      "\t* f1 score:  0.9947325481402893\n",
+      "\t* accuracy score:  0.9944911792295974\n",
+      "\t* precision score:  0.9980580993971515\n",
       "\t* recall score:  0.9914379874878128\n",
       "-----------------------------------------------------------------------------------------------------------\n",
       "Classifier:  KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
