--- a/Classifiers - Text.ipynb
+++ b/Classifiers - Text.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
        "\"Applicant's drug abuse was not mitigated where marijuana use was recent, and had continued after Applicant stated an intent to refrain from drug use in the future. He falsified his drug abuse history on security questionnaires in March and October 1995 an\""
       ]
      },
-     "execution_count": 194,
+     "execution_count": 232,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
        "True"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 233,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
@@ -1158,7 +1158,7 @@
        " ...]"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 235,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1177,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [
     {
@@ -1187,7 +1187,7 @@
        "\twith 19 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 236,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1199,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
@@ -1208,7 +1208,7 @@
        "(700, 2684)"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 237,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1236,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1246,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
@@ -1257,7 +1257,7 @@
        "Name: Denied, dtype: int64"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1285,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
@@ -1294,7 +1294,7 @@
        "(700, 2684)"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 240,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1305,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
@@ -1314,7 +1314,7 @@
        "(700,)"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 241,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1346,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1356,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -1365,7 +1365,7 @@
        "(469, 2684)"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1377,7 +1377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 244,
    "metadata": {
     "scrolled": true
    },
@@ -1388,7 +1388,7 @@
        "(231, 2684)"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 244,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1414,7 +1414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1424,17 +1424,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [],
    "source": [
     "#send X and y into our classifier to build a model\n",
-    "logreg_model = clf.fit(X, y)"
+    "logreg_model = clf.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [
     {
@@ -1465,12 +1465,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The next step in our model is to take the model we just made using the training data and feeding the test data into it. This will output an array of values that the algorithm has determined to be the denied status."
+    "The next step in our process is to take the model we just made using the training data and feeding the test data into it. This will output an array of values that the algorithm has determined to be the denied status."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1480,24 +1480,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
-   "metadata": {},
+   "execution_count": 249,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Here is the model's predictions: \n",
-      "[1. 1. 0. 0. 0. 1. 1. 1. 0. 0. 0. 1. 1. 1. 1. 0. 0. 1. 1. 1. 0. 1. 0. 0.\n",
-      " 1. 0. 0. 1. 1. 1. 1. 0. 0. 1. 1. 0. 1. 0. 1. 1. 1. 1. 1. 1. 0. 1. 0. 0.\n",
-      " 1. 1. 1. 1. 0. 1. 0. 1. 0. 0. 1. 0. 1. 0. 0. 1. 1. 0. 0. 1. 0. 0. 1. 1.\n",
-      " 1. 0. 0. 1. 1. 1. 1. 0. 1. 1. 1. 1. 1. 1. 0. 0. 0. 0. 1. 0. 1. 0. 0. 1.\n",
-      " 0. 1. 1. 1. 0. 1. 0. 1. 0. 0. 1. 0. 1. 1. 0. 0. 1. 1. 0. 0. 0. 0. 1. 1.\n",
-      " 1. 0. 1. 0. 0. 0. 1. 0. 1. 1. 0. 0. 1. 0. 1. 1. 1. 0. 0. 1. 0. 0. 0. 0.\n",
-      " 1. 1. 1. 1. 1. 1. 0. 1. 1. 1. 1. 0. 0. 0. 1. 1. 0. 0. 0. 1. 0. 1. 0. 0.\n",
-      " 1. 0. 0. 1. 1. 0. 1. 1. 0. 0. 1. 0. 1. 0. 1. 1. 0. 0. 0. 1. 0. 0. 1. 0.\n",
-      " 1. 0. 0. 1. 0. 1. 1. 1. 1. 1. 0. 0. 1. 1. 1. 0. 1. 0. 0. 1. 1. 0. 0. 0.\n",
-      " 0. 1. 0. 0. 0. 1. 0. 1. 0. 0. 0. 1. 0. 0. 1.]\n"
+      "[1. 1. 0. 0. 0. 0. 1. 0. 1. 1. 0. 1. 0. 1. 1. 0. 0. 1. 1. 1. 0. 1. 0. 0.\n",
+      " 1. 0. 0. 1. 1. 1. 1. 0. 0. 0. 1. 0. 1. 0. 1. 0. 1. 1. 1. 1. 0. 1. 0. 1.\n",
+      " 1. 1. 1. 1. 0. 1. 0. 0. 0. 0. 1. 0. 1. 0. 0. 1. 1. 0. 0. 1. 1. 0. 1. 1.\n",
+      " 1. 0. 0. 1. 1. 1. 1. 0. 1. 0. 1. 1. 1. 1. 0. 0. 0. 0. 1. 0. 1. 0. 0. 1.\n",
+      " 0. 1. 1. 1. 0. 1. 0. 1. 0. 0. 1. 0. 1. 1. 1. 0. 1. 1. 0. 0. 0. 0. 1. 1.\n",
+      " 1. 0. 1. 1. 0. 0. 1. 0. 1. 1. 0. 0. 1. 0. 1. 1. 1. 0. 0. 1. 1. 1. 0. 0.\n",
+      " 1. 1. 0. 1. 0. 0. 0. 1. 1. 1. 1. 0. 0. 0. 1. 1. 0. 0. 0. 1. 0. 1. 0. 1.\n",
+      " 1. 0. 0. 0. 1. 1. 1. 1. 1. 1. 1. 0. 1. 0. 1. 1. 0. 0. 0. 1. 0. 1. 1. 0.\n",
+      " 1. 1. 0. 1. 0. 1. 1. 1. 1. 1. 0. 1. 1. 1. 0. 0. 1. 1. 0. 1. 1. 0. 0. 0.\n",
+      " 0. 1. 0. 0. 0. 1. 0. 1. 0. 0. 0. 1. 0. 1. 1.]\n"
      ]
     }
    ],
@@ -1523,7 +1525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1533,14 +1535,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy score for LogisticRegression classifier:   0.9696969696969697\n"
+      "Accuracy score for LogisticRegression classifier:   0.8441558441558441\n"
      ]
     }
    ],
@@ -1554,14 +1556,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***Here we can see that our LogisticRegression model was correct 96.97% of the time when predicting the denied status from the judgment field alone.***"
+    "***Here we can see that our LogisticRegression model was correct 84.42% of the time when predicting the denied status from the judgment field alone.***"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Test for Best Classifier to Use"
+    "## 5. Test for Best Algorithm to Use"
    ]
   },
   {
@@ -1571,7 +1573,7 @@
     "Now that we understand how machine learning is done, we can determine which model is the best choice for our data. In this example we will use 5 different classifiers and evaluate each against 5 accuracy metrics.\n",
     "\n",
     "__Note:__ \n",
-    "1. For picking a fold size, it is recommended to choose n=5, 10, or 20 (http://vinhkhuc.github.io/2015/03/01/how-many-folds-for-cross-validation.html). For this problem, we have chosen K = 20 and the comparisons can be found at ***.\n",
+    "1. For picking a fold size, it is recommended to choose n=5, 10, or 20 (http://vinhkhuc.github.io/2015/03/01/how-many-folds-for-cross-validation.html). For this problem, we have chosen K = 20 and the comparisons can be found at https://github.com/mawebster9/ThesisCode/blob/master/NumFoldsComparison.txt.\n",
     "2. The cross_val_score() function works by running all of the following functions:\n",
     "    - Shuffle the dataset randomly\n",
     "    - Split the dataset into k (n=20) groups\n",
@@ -1594,7 +1596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [
     {
@@ -1611,11 +1613,11 @@
       "                       verbose=0, warm_start=False)\n",
       "\n",
       "Scoring Metrics: \n",
-      "\t* roc_auc score:  0.8453639625784956\n",
-      "\t* f1 score:  0.7847400443360619\n",
-      "\t* accuracy score:  0.7504715219421101\n",
-      "\t* precision score:  0.7536855864723512\n",
-      "\t* recall score:  0.7642156862745098\n",
+      "\t* roc_auc score:  0.8308428382246145\n",
+      "\t* f1 score:  0.7653262462701783\n",
+      "\t* accuracy score:  0.7610364145658264\n",
+      "\t* precision score:  0.726615353962978\n",
+      "\t* recall score:  0.7996732026143791\n",
       "-----------------------------------------------------------------------------------------------------------\n",
       "Classifier:  GaussianNB(priors=None, var_smoothing=1e-09)\n",
       "\n",
@@ -1647,11 +1649,11 @@
       "                       random_state=None, splitter='best')\n",
       "\n",
       "Scoring Metrics: \n",
-      "\t* roc_auc score:  0.7369281045751632\n",
-      "\t* f1 score:  0.7329384173685057\n",
-      "\t* accuracy score:  0.7281676003734827\n",
-      "\t* precision score:  0.7294025002831034\n",
-      "\t* recall score:  0.732516339869281\n",
+      "\t* roc_auc score:  0.7368464052287581\n",
+      "\t* f1 score:  0.747305478231814\n",
+      "\t* accuracy score:  0.7266573295985059\n",
+      "\t* precision score:  0.7581969264451766\n",
+      "\t* recall score:  0.7410130718954246\n",
       "-----------------------------------------------------------------------------------------------------------\n",
       "Classifier:  KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
       "                     metric_params=None, n_jobs=None, n_neighbors=6, p=2,\n",
