--- a/1_Classifiers - Text.ipynb
+++ b/1_Classifiers - Text.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,11 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.neighbors import KNeighborsClassifier"
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "# import useful functions\n",
+    "import helper.mymodule as my\n",
+    "from helper.mymodule import csv_conf, params_conf\n"
    ]
   },
   {
@@ -56,20 +60,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#connect to CSV file that contains our data\n",
-    "path_to_file = \"https://raw.githubusercontent.com/mawebster9/ThesisCode/master/appeals_query.csv\"\n",
+    "path_to_file = csv_conf['path']\n",
     "\n",
     "#open, read, and store our data into a pandas dataframe\n",
-    "appeals_data = pd.read_csv(path_to_file, encoding='latin-1')"
+    "appeals_data = pd.read_csv(path_to_file, encoding=csv_conf['encoding'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +93,7 @@
        "\"Applicant's drug abuse was not mitigated where marijuana use was recent, and had continued after Applicant stated an intent to refrain from drug use in the future. He falsified his drug abuse history on security questionnaires in March and October 1995 an\""
       ]
      },
-     "execution_count": 232,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +114,7 @@
        "True"
       ]
      },
-     "execution_count": 233,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1158,7 +1162,7 @@
        " ...]"
       ]
      },
-     "execution_count": 235,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1177,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1187,7 +1191,7 @@
        "\twith 19 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 236,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1199,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1208,7 +1212,7 @@
        "(700, 2684)"
       ]
      },
-     "execution_count": 237,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1236,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1246,18 +1250,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0    356\n",
-       "1.0    344\n",
+       "False    356\n",
+       "1        344\n",
        "Name: Denied, dtype: int64"
       ]
      },
-     "execution_count": 239,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1285,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1294,7 +1298,7 @@
        "(700, 2684)"
       ]
      },
-     "execution_count": 240,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1305,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1314,7 +1318,7 @@
        "(700,)"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1346,17 +1350,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "#break 33% of X and y into X_test and y_test, break other remaining 67% into X_train and y_train\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=params_conf['test_size'], random_state=params_conf['standard_seed'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1365,7 +1369,7 @@
        "(469, 2684)"
       ]
      },
-     "execution_count": 243,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1377,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -1388,7 +1392,7 @@
        "(231, 2684)"
       ]
      },
-     "execution_count": 244,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1414,38 +1418,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "#specify which classifier to use and set parameters\n",
-    "clf = LogisticRegression(random_state=0, solver='liblinear')"
+    "clf = LogisticRegression(random_state=params_conf['standard_seed'], solver=params_conf['logistic_solver'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "#send X and y into our classifier to build a model\n",
+    "y_train = y_train.astype('int64')\n",
     "logreg_model = clf.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-      "                   intercept_scaling=1, l1_ratio=None, max_iter=100,\n",
-      "                   multi_class='warn', n_jobs=None, penalty='l2',\n",
-      "                   random_state=0, solver='liblinear', tol=0.0001, verbose=0,\n",
-      "                   warm_start=False)\n"
+      "LogisticRegression(random_state=42, solver='liblinear')\n"
      ]
     }
    ],
@@ -1470,7 +1471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1480,7 +1481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -1490,16 +1491,13 @@
      "output_type": "stream",
      "text": [
       "Here is the model's predictions: \n",
-      "[1. 1. 0. 0. 0. 0. 1. 0. 1. 1. 0. 1. 0. 1. 1. 0. 0. 1. 1. 1. 0. 1. 0. 0.\n",
-      " 1. 0. 0. 1. 1. 1. 1. 0. 0. 0. 1. 0. 1. 0. 1. 0. 1. 1. 1. 1. 0. 1. 0. 1.\n",
-      " 1. 1. 1. 1. 0. 1. 0. 0. 0. 0. 1. 0. 1. 0. 0. 1. 1. 0. 0. 1. 1. 0. 1. 1.\n",
-      " 1. 0. 0. 1. 1. 1. 1. 0. 1. 0. 1. 1. 1. 1. 0. 0. 0. 0. 1. 0. 1. 0. 0. 1.\n",
-      " 0. 1. 1. 1. 0. 1. 0. 1. 0. 0. 1. 0. 1. 1. 1. 0. 1. 1. 0. 0. 0. 0. 1. 1.\n",
-      " 1. 0. 1. 1. 0. 0. 1. 0. 1. 1. 0. 0. 1. 0. 1. 1. 1. 0. 0. 1. 1. 1. 0. 0.\n",
-      " 1. 1. 0. 1. 0. 0. 0. 1. 1. 1. 1. 0. 0. 0. 1. 1. 0. 0. 0. 1. 0. 1. 0. 1.\n",
-      " 1. 0. 0. 0. 1. 1. 1. 1. 1. 1. 1. 0. 1. 0. 1. 1. 0. 0. 0. 1. 0. 1. 1. 0.\n",
-      " 1. 1. 0. 1. 0. 1. 1. 1. 1. 1. 0. 1. 1. 1. 0. 0. 1. 1. 0. 1. 1. 0. 0. 0.\n",
-      " 0. 1. 0. 0. 0. 1. 0. 1. 0. 0. 0. 1. 0. 1. 1.]\n"
+      "[1 1 0 0 0 0 1 0 1 1 0 1 0 1 1 0 0 1 1 1 0 1 0 0 1 0 0 1 1 1 1 0 0 0 1 0 1\n",
+      " 0 1 0 1 1 1 1 0 1 0 1 1 1 1 1 0 1 0 0 0 0 1 0 1 0 0 1 1 0 0 1 1 0 1 1 1 0\n",
+      " 0 1 1 1 1 0 1 0 1 1 1 1 0 0 0 0 1 0 1 0 0 1 0 1 1 1 0 1 0 1 0 0 1 0 1 1 1\n",
+      " 0 1 1 0 0 0 0 1 1 1 0 1 1 0 0 1 0 1 1 0 0 1 0 1 1 1 0 0 1 1 1 0 0 1 1 0 1\n",
+      " 0 0 0 1 1 1 1 0 0 0 1 1 0 0 0 1 0 1 0 1 1 0 0 0 1 1 1 1 1 1 1 0 1 0 1 1 0\n",
+      " 0 0 1 0 1 1 0 1 1 0 1 0 1 1 1 1 1 0 1 1 1 0 0 1 1 0 1 1 0 0 0 0 1 0 0 0 1\n",
+      " 0 1 0 0 0 1 0 1 1]\n"
      ]
     }
    ],
@@ -1525,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1535,7 +1533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1548,6 +1546,7 @@
    ],
    "source": [
     "#compare y_test values with the predicted y values\n",
+    "y_test = y_test.to_numpy(dtype='int64')\n",
     "score = accuracy_score(y_test, y_pred).mean()\n",
     "print(\"Accuracy score for LogisticRegression classifier:  \", score)"
    ]
@@ -1596,7 +1595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1604,90 +1603,55 @@
      "output_type": "stream",
      "text": [
       "-----------------------------------------------------------------------------------------------------------\n",
-      "Classifier:  RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
-      "                       max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
-      "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
-      "                       min_samples_leaf=1, min_samples_split=2,\n",
-      "                       min_weight_fraction_leaf=0.0, n_estimators=5,\n",
-      "                       n_jobs=None, oob_score=False, random_state=None,\n",
-      "                       verbose=0, warm_start=False)\n",
+      "Classifier:  RandomForestClassifier(n_estimators=5, random_state=42)\n",
       "\n",
       "Scoring Metrics: \n",
-      "\t* roc_auc score:  0.8308428382246145\n",
-      "\t* f1 score:  0.7653262462701783\n",
-      "\t* accuracy score:  0.7610364145658264\n",
-      "\t* precision score:  0.726615353962978\n",
-      "\t* recall score:  0.7996732026143791\n",
+      "\t* roc_auc score:  0.8462418300653594\n",
+      "\t* f1 score:  0.7916051816104203\n",
+      "\t* accuracy score:  0.78\n",
+      "\t* precision score:  0.7665964277847607\n",
+      "\t* recall score:  0.8308823529411764\n",
       "-----------------------------------------------------------------------------------------------------------\n",
-      "Classifier:  GaussianNB(priors=None, var_smoothing=1e-09)\n",
+      "Classifier:  GaussianNB()\n",
       "\n",
       "Scoring Metrics: \n",
-      "\t* roc_auc score:  0.7362881263616556\n",
-      "\t* f1 score:  0.7405972527106925\n",
-      "\t* accuracy score:  0.7369561157796451\n",
-      "\t* precision score:  0.740146952720482\n",
+      "\t* roc_auc score:  0.7406862745098038\n",
+      "\t* f1 score:  0.7439911036863747\n",
+      "\t* accuracy score:  0.7414285714285713\n",
+      "\t* precision score:  0.747660966942078\n",
       "\t* recall score:  0.7503267973856209\n",
       "-----------------------------------------------------------------------------------------------------------\n",
-      "Classifier:  LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-      "                   intercept_scaling=1, l1_ratio=None, max_iter=100,\n",
-      "                   multi_class='warn', n_jobs=None, penalty='l2',\n",
-      "                   random_state=None, solver='liblinear', tol=0.0001, verbose=0,\n",
-      "                   warm_start=False)\n",
+      "Classifier:  LogisticRegression(solver='liblinear')\n",
       "\n",
       "Scoring Metrics: \n",
-      "\t* roc_auc score:  0.8984407706437697\n",
-      "\t* f1 score:  0.8213369307550625\n",
-      "\t* accuracy score:  0.8098366013071896\n",
-      "\t* precision score:  0.7941392775611041\n",
+      "\t* roc_auc score:  0.8970588235294116\n",
+      "\t* f1 score:  0.8232788285122966\n",
+      "\t* accuracy score:  0.8114285714285714\n",
+      "\t* precision score:  0.7979467282336276\n",
       "\t* recall score:  0.8630718954248368\n",
       "-----------------------------------------------------------------------------------------------------------\n",
-      "Classifier:  DecisionTreeClassifier(class_weight=None, criterion='gini', max_depth=None,\n",
-      "                       max_features=None, max_leaf_nodes=None,\n",
-      "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
-      "                       min_samples_leaf=1, min_samples_split=2,\n",
-      "                       min_weight_fraction_leaf=0.0, presort=False,\n",
-      "                       random_state=None, splitter='best')\n",
+      "Classifier:  DecisionTreeClassifier()\n",
       "\n",
       "Scoring Metrics: \n",
-      "\t* roc_auc score:  0.7368464052287581\n",
-      "\t* f1 score:  0.747305478231814\n",
-      "\t* accuracy score:  0.7266573295985059\n",
-      "\t* precision score:  0.7581969264451766\n",
-      "\t* recall score:  0.7410130718954246\n",
+      "\t* roc_auc score:  0.7404411764705883\n",
+      "\t* f1 score:  0.7201790804885532\n",
+      "\t* accuracy score:  0.7271428571428571\n",
+      "\t* precision score:  0.7564876110880788\n",
+      "\t* recall score:  0.7379084967320261\n",
       "-----------------------------------------------------------------------------------------------------------\n",
-      "Classifier:  KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
-      "                     metric_params=None, n_jobs=None, n_neighbors=6, p=2,\n",
-      "                     weights='uniform')\n",
+      "Classifier:  KNeighborsClassifier(n_neighbors=6)\n",
       "\n",
       "Scoring Metrics: \n",
-      "\t* roc_auc score:  0.8541175402622923\n",
-      "\t* f1 score:  0.7670202071542204\n",
-      "\t* accuracy score:  0.7681909430438841\n",
-      "\t* precision score:  0.7781400476850739\n",
+      "\t* roc_auc score:  0.8508986928104575\n",
+      "\t* f1 score:  0.7654894744737919\n",
+      "\t* accuracy score:  0.7657142857142856\n",
+      "\t* precision score:  0.7751592619159755\n",
       "\t* recall score:  0.766830065359477\n"
      ]
     }
    ],
    "source": [
-    "classifiers = [RandomForestClassifier(n_estimators=5), GaussianNB(), LogisticRegression(solver='liblinear'), DecisionTreeClassifier(criterion='gini'), KNeighborsClassifier(n_neighbors=6)]\n",
-    "clf_names = ['RandomForest','GausianNB','LogisticRegression','DecisionTreeClassRegressor', 'KNeighbors']\n",
-    "metric_names = ['roc_auc','f1','accuracy','precision','recall']\n",
-    "\n",
-    "scv = StratifiedKFold(n_splits=20)\n",
-    "\n",
-    "scores_df = pd.DataFrame(index=metric_names,columns=clf_names)\n",
-    "clf_scores = []\n",
-    "for clf, name in zip(classifiers, clf_names):\n",
-    "    print('-----------------------------------------------------------------------------------------------------------')\n",
-    "    print('Classifier: ',clf)\n",
-    "    print('')\n",
-    "    print(\"Scoring Metrics: \")\n",
-    "    for metric in metric_names:\n",
-    "        score = cross_val_score(clf,X.toarray(),y,scoring=metric, cv=scv).mean()\n",
-    "        clf_scores.append(score)\n",
-    "        print('\\t*',metric,'score: ', score)\n",
-    "    scores_df[name] = clf_scores\n",
-    "    clf_scores = []\n"
+    "my.print_scoring_metrics(clf=clf, X=X.toarray(), y=y.to_numpy(dtype='int64'))"
    ]
   },
   {
@@ -1721,7 +1685,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1735,9 +1699,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
